--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -1,19 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
+  <parent>
+    <groupId>com.protocol</groupId>
+    <artifactId>NettyProtocol</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
   <groupId>com.protocol</groupId>
-  <artifactId>NettyProtocol</artifactId>
+  <artifactId>Common</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-
-  <name>NettyProtocol</name>
+  <name>Common</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -42,9 +43,4 @@
 		<version>1.4.5.Final</version>
 	</dependency>
   </dependencies>
-  <modules>
-    <module>Server</module>
-    <module>Client</module>
-    <module>Common</module>
-  </modules>
 </project>
